[package]
name = "soroban-option"
version = "0.1.0"
authors = ["Block TIme Financial, Inc <info@blocktimefinancial.com>"]
license = "MIT"
edition = "2021"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "0.7.0"

[dev_dependencies]
soroban-sdk = { version = "0.7.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true